Example/test: how to add a new module + frontend
The module subscribes to live feed of regular pmu frames in,
publishes filtered data (frequency only) in new outbound
FrequencyResult(ResultEnvelope[Frequencies]) class/data type.

New web frontend displays that outbound stream raw
